--- a/style.css
+++ b/style.css
@@ -131,3 +131,53 @@ li a{
 	height: 380px;
 	margin: auto 0px;
 }
+.title
+{
+	text-align: center;
+	font-family: Courier New, monospace ;
+	font-weight: 500;
+	font-size: 45px;
+	color: #FAF0E6;
+	margin-top: 20px;
+}
+.moments
+{
+	background-color: black;
+}
+.masters
+{
+	display: flex;
+	margin-left: 270px;
+	margin-bottom: 20px;
+}
+.mast-img 
+{
+	width: 200px;
+	height: 200px;   
+	display: inline-block;
+	position: relative;
+	margin: 0px 0px 10px 0px;
+}
+.mast-img img
+{
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	object-fit: cover;
+}
+.mast
+{
+	flex: 0 1 25%;
+	padding: 0px 20px;
+	text-align: center;
+}
+.mastt
+{
+	font-family: Courier New, monospace ;
+	font-size: 20px;
+	color: #FAF0E6;
+	line-height: 20px;
+	margin-bottom: 15px;
+}
