--- a/style.css
+++ b/style.css
@@ -104,8 +104,9 @@ li a{
 .container2{
     background-color: black;
     width: 100%;
-    height: all;
+    min-height: 800px;
     padding-top: 20px;
+    max-height: all;
 }
 .max1
 {
@@ -180,4 +181,45 @@ li a{
 	color: #FAF0E6;
 	line-height: 20px;
 	margin-bottom: 15px;
+}
+.masters_info{
+    width: 100%;
+    min-height: 540px;
+    height: all;
+    display: block;
+}
+.masters_info .alena{
+    width: 100%;
+    height: 280px;
+}
+.masters_info .alena img{
+    float: left;
+    margin-left: 25px;
+    margin-top: 25px;
+}
+.masters_info img{
+    width: 250px;
+    height: 250px;
+}
+ .alena .info{
+    text-align: left;
+    padding-top: 80px;
+}
+.masters_info .info{
+    color: #FAF0E6;
+    font-family: Courier New, monospace ;
+    font-size: 18px;
+    letter-spacing: 0px;
+}
+.masters_info .rusl{
+    width: 100%;
+    height: 250px;
+}
+.masters_info .rusl img{
+    float: right;
+    margin-right: 25px;
+}
+.rusl .info{
+    text-align: right;
+    padding-top: 45px;
 }
